получение своих ссылок
